[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/characters/bug.png" type="Texture" id=1]
[ext_resource path="res://scripts/characters/Bug.gd" type="Script" id=2]
[ext_resource path="res://scenes/animations/HurtBlink.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/sfx/bug_splat.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sfx/hit_enemy.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.25058
height = 7.83228

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.1475, 8.09488 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 25.2244
height = 29.0232

[node name="Bug" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 32
collision_mask = 35
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.340031, -7.74207 )
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0227737, -1.6039 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2( -0.134605, -5.80443 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.494904, -2.00816 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2( -0.134605, -5.80443 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.494904, -2.00816 )
shape = SubResource( 2 )

[node name="EnemyAversionBox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyAversionBox"]
position = Vector2( -0.530327, -7.07107 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="RecoveryBlink" parent="." instance=ExtResource( 3 )]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -3.014
max_distance = 200.0

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 200.0
[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_HitHurtBox_area_shape_entered"]
[connection signal="area_entered" from="EnemyAversionBox" to="." method="_on_EnemyAversionBox_area_entered"]
[connection signal="area_exited" from="EnemyAversionBox" to="." method="_on_EnemyAversionBox_area_exited"]
